# KnxInterfaceVIMAR01847

./: .autotools  .cproject  .gitignore  .project  AUTHORS  COPYING  Makefile.am  NEWS  README  README.md  autogen-cross-rpi.sh  autogen.sh  configure.ac  deploy.sh
example/: 01847-busmonitor-nolib.c  01847-busmonitor.c  01847-busmonitor.h  01847-sendmsg-nolib.c  01847-sendmsg.c  01847-temp-reader.c  01847-temp.c  01847-temp.h  01847-test.c  01847-test.h  KNXTinySerial-libtest.c  KNXTinySerial-test.c  Makefile.am  common.c  common.h  tplotd-file.py  tplotd.py
include/: Makefile.am  libknx810.h  libknxusb.h
libknx810/: Makefile.am  libknx810.c  libknx810_priv.h
libknxusb/: Makefile.am  cemi.c  cemi.h  knxhid.c  knxhid.h  knxutils.c  knxutils.h  libknxusb.c  libknxusb_priv.h
src/: 01847-test.c  Makefile.am
tests/: Makefile.am  test_01847_temp  test_01847_temp.c  test_knxutils.c  test_libknxusb.c
udev/: 99-vimar-01847.rules
